impl to update shared services roles for a group - constants, routes, controller, service, api doc, repo, routes
