# backend/src/common/routes.constants.ts
@@ -27,4 +27,5 @@ export class RoutesConstants {
     public static ASSOCIATE_SHARED_SERVICE_TO_TENANT = '/v1/tenants/:tenantId/shared-services'
     public static GET_SHARED_SERVICES_FOR_TENANT = '/v1/tenants/:tenantId/shared-services'
     public static GET_SHARED_SERVICE_ROLES_FOR_GROUP = '/v1/tenants/:tenantId/groups/:groupId/shared-services/shared-service-roles'
+    public static UPDATE_SHARED_SERVICE_ROLES_FOR_GROUP = '/v1/tenants/:tenantId/groups/:groupId/shared-services/shared-service-roles'
 }
